--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^0.5.0+1
+  path_provider: ^1.1.0
   http_client_helper: ^0.1.9
   crypto: ^2.0.6
 #  image_picker_saver: ^0.1.0
